#Personal Button is not visible

appId: com.toughra.ustadmobile
env:
 TESTRESULTSDIR: "${TESTRESULTSDIR}/007_002d_user_registration_above_age_13_personal_account_username_password"
 TESTNAME:  "007_002d_user_registration_above_age_13_personal_account_username_password"
---
- clearState: com.toughra.ustadmobile
- runFlow:
   file: "../common/startserver.yaml"
   env:
    CONTROLSERVER: ${CONTROLSERVER}
    TESTSERIAL: ${TESTSERIAL}
    TESTNAME: ${TESTNAME}

- runFlow: "../common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "../common/select_site.yaml"
#admin enable user registration
- runFlow:
   file: "../common/user_login.yaml"
- runFlow:
    file: "../common/enable_user_registration.yaml"
- assertVisible: "Yes"
- runFlow: "../common/clear_state_and_personal_account_new_user_flow.yaml"
- tapOn: 2024
- longPressOn: 2024
- inputText: 2009
- hideKeyboard
- tapOn: 2009
- tapOn: "* Required"
- tapOn: "Next"
- extendedWaitUntil:
    visible:  "Terms and company policies"
    timeout: 10000
- tapOn: "Accept"
- tapOn: "Full name*"
- inputText: "User ABC"
- tapOn: "Gender*"
- tapOn: "Female"
- tapOn: "Other options"
- tapOn: "Create username and password"
- tapOn: "Username"
- inputText: "userabc"
- tapOn: "Password"
- inputText: "test1234"
- tapOn: "Sign-up"
- assertVisible: "Library"


