appId: com.toughra.ustadmobile
env:
  TESTRESULTSDIR: "build/results/Screenshots/001_001_admin_can_add_content_003-video"
onFlowStart:
  - runScript:
      file: "../common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - runScript:
      file: "../common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---

# Login as admin, add a course, student, and teacher
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
- runFlow:
    file: "../common/admin_login.yaml"
- runFlow:
    file: "../common/create_course_with_1teacher_1student.yaml"
    env:
      TESTCOURSENAME: "Test Course"

# Clear the app and login as the teacher
- clearState: com.toughra.ustadmobile
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
- runFlow:
    file: "../common/user_login.yaml"
    env:
      USERNAME: t1
      PASSWORD: test

# Open the API consumer app, then request a token as the student
- launchApp: com.ustadmobile.ustadapiconsumer
- tapOn: "Request Token"
- tapOn: "Add another account"
- runFlow: "../common/select_site.yaml"
- runFlow:
    file: "../common/user_login.yaml"
    env:
      USERNAME: s1
      PASSWORD: test
- tapOn: "Accept"

# Check that token was received and class is retrieved
- assertVisible:
    text: "Token"
    id: "token_label"
- scrollUntilVisible:
    element:
      text: "Get Classes For User"
- tapOn: "Get Classes For User"
- assertVisible: "Test Course"
