appId: com.toughra.ustadmobile
tags:
  - courseTest
  - usernameValidation
env:
  TESTNAME: "002_010_username_validation"
  TESTRESULTSDIR: "build/reports/maestro/002_010_username_validation/Screenshots"
onFlowStart:
  - startRecording: 002_010_username_validation
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - stopRecording
  - runScript:
      file: "common/stopserver.js"
      env:
       TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
- runFlow: "common/clear_state_and_get_started.yaml"
- runFlow: "common/select_site.yaml"
#-------Admin Login---------------#
- runFlow:
    file: "common/admin_login.yaml"
- tapOn: "People"
- tapOn:
    id: "floating_action_button"
- tapOn: "Add Person"
- tapOn: "First names*"
- inputText: User
- hideKeyboard
- tapOn: "Last name*"
- inputText: A
- hideKeyboard
- scrollUntilVisible:
    element:
      text: "Gender*"
    direction: DOWN
- tapOn: "Gender*"
- tapOn: Male
- tapOn: "SAVE"
- tapOn: "User A"
- tapOn: "CREATE ACCOUNT"
  # verify the Username must be at least 3 characters
- tapOn: "Username*"
- inputText: uS
- tapOn: "New password*"
- inputText: 1234
- tapOn: "SAVE"
- assertVisible: "Username must be at least 3 characters"
- tapOn: "Username*"
- eraseText
  # verify the uppercase, special characters and space are removed automatically
- inputText: uSer@ A
- tapOn: "SAVE"
- assertVisible: "usera"
- assertVisible: "Change Password"
- tapOn: "People"
- tapOn:
    id: "floating_action_button"
- tapOn: "Add Person"
- tapOn: "First names*"
- inputText: User
- hideKeyboard
- tapOn: "Last name*"
- inputText: B
- hideKeyboard
- scrollUntilVisible:
    element:
      text: "Gender*"
    direction: DOWN
- tapOn: "Gender*"
- tapOn: Male
- tapOn: "SAVE"
- tapOn: "User B"
- tapOn: "CREATE ACCOUNT"
 # verify the . _ characters are acceptable
- tapOn: "Username*"
- inputText: user.B_123
- tapOn: "New password*"
- inputText: 1234
- tapOn: "SAVE"
- assertVisible: "user.b_123"
- assertVisible: "Change Password"
- runFlow: "common/clear_state_and_get_started.yaml"
- runFlow: "common/select_site.yaml"
  # verify the uppercase, special characters and space are removed automatically
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "user@ A"
      PASSWORD: "1234"
- assertVisible: "Library"
  # verify the . _ characters are acceptable
- runFlow: "common/clear_state_and_get_started.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "user.B_123"
      PASSWORD: "1234"
- assertVisible: "Library"